--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ build = "src/build.rs"
 
 [dependencies]
 colored = "1.5.2"
+docopt = "0.8.1"
+serde = "1.0"
+serde_derive = "1.0"
 
 [build-dependencies]
 peg = "0.5.4"
+
